fix file upload issue having space in the filename

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,8 +97,8 @@
         </div>
         <div class="form-group" id="file-group" style="display: none;">
           <label for="session-file">Upload Prompt File (Optional)</label>
-          <input type="file" id="session-file" name="file" accept=".txt,.md,.prompt">
-          <small>Upload a prompt file for non-interactive mode</small>
+          <input type="file" id="session-file" name="file" accept=".txt,.md">
+          <small>Upload a .txt or .md file for non-interactive mode</small>
         </div>
         <div class="form-actions">
           <button type="submit" class="btn-primary">Launch Now</button>
